static/scss/homepage.scss
#home-page {
  background: #fff;
}

h3 {
  line-height: 1.4em;
}

body.app-media {
  padding-top: 0;
  font-size: 14px;
}

.navbar {
  background-color: $mm-brand-bg;
  border-radius: 0;
  height: auto;
  min-height: 0;
  padding: 10px 27px 8px 33px;

  .navbar-header {
    padding: 0;

    .pull-left {
      position: relative;
      top: 2px;

      @include breakpoint(phone) {
        float: left;
      }

      .brand-logo {
        float: left;
        margin-right: 15px;

        img {
          width: 60px;
        }
      }

      .divider-large {
        width: 14px;
        height: 34px;
        margin: 4px 15px 0 0;
        border-left: 1px solid rgba(255, 255, 255, 0.5);
        float: left;
      }

      .header-page-name {
        display: inline-block;
        color: white;
        font-size: 17px;
        margin: 0 20px 0 0;
        font-weight: 300;
        float: left;
        position: relative;
        bottom: 2px;

        h2 {
          font-size: 17px;
          margin: 0;
          padding: 0;
          font-weight: 300;

          a, a:hover {
            color: white;
            font-weight: 300;
          }
        }

        img.micromasters_logo {
          width: 120px;
        }
      }
    }

    .pull-right {
      color: #000;

      @include breakpoint(phone) {
        float: left !important;
        display: block;
        margin: 20px auto 4px;
        width: 100%;

        a.button-signup {
          width: 45%;
        }

        a.button-login {
          width: 47%;
          margin-right: 5%;
          border-width: 1px;
        }
      }

      a.header-dashboard-link {
        display: inline-block;
        background: rgba(0,0,0, 0.14);
        margin: 0 15px 0 0;
        padding: 12px 25px;
        font-weight: 400;
        font-size: 16px;
        color: #fff;
        text-decoration: none;
        position: relative;
        top: 2px;

        @include breakpoint(phone) {
          text-align: center;
          padding: 13px 0;
          width: 48%;
          margin-right: 4%;
        }
      }

      a.header-dashboard-link:hover {
        text-decoration: underline;
      }
    }
  }
}

.centered-content {
  width: 97%;
  max-width: 1150px;
  margin: 0 auto;
}

.banner-wrapper {
  background: #222 center center url(/static/images/lp_hero.jpg) no-repeat;
  margin: 0 auto;
  width: 100%;
  min-height: 620px;
  padding: 0;
  background-size: cover;
  background-attachment: fixed;
  position: relative;
  height: 94vh;

  @include breakpoint(phone) {
    height: 460px;
    min-height: 0;
    background-attachment: scroll;
  }

  .banner-wrapper-content {
    margin: 0 auto;
    padding: 40px;
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
    background: $brand-overlay;

    @include breakpoint(phone) {
      padding: 20px 8%;
    }

    h1, h2 {
      color: #ffffff;
      margin: 0 0 20px;
    }

    h1 {
      font-size: 40px;
      font-weight: 400;
      margin: 0 0 1vh 0;

      @media (min-width: 1200px) {
        font-size: 3.2vw;
      }

      @include breakpoint(phone) {
        font-size: 25px;
        line-height: 1.15;
        margin-bottom: 0;
      }
    }

    h2 {
      font-size: 25px;
      font-weight: 300;
      line-height: 1.4em;
      color: rgba(255,255,255,.9);
      padding: 0;

      @media (min-width: 1200px) {
        font-size: 2.2vw;
      }

      @include breakpoint(phone) {
        display: none;
      }
    }

    .btn-learn-more {
      background: #4c8399;
      border-color: #4c8399;
      padding: 10px 18px;
      border-radius: 4px;
      font-weight: 300;
    }

    .sign-in-button {
      font-weight: 300;
      margin-left: 10px;
    }

    .banner-image img {
      width: 455px;
      opacity: .4;
    }
  }
}

.sub-banner {
  background-color: #ececec;

  .sub-banner-section {
    padding: 7vw 0 8vw;
    text-align: center;

    .sub-banner-text {
      text-align: left;
      margin: 0 auto;
      color: #000;
      font-size: 25px;
      font-weight: 200;
      line-height: 44px;
      width: 81%;
      max-width: 1000px;

      @include breakpoint(phone) {
        width: 90%;
      }

      h3 {
        font-size: 25px;
        margin: 0 0 30px;
        font-weight: 400;
        color: rgba(0,0,0,.87);

        @include breakpoint(phone) {
          font-size: 22px;
        }

        @media (min-width: 1200px) {
          font-size: 1.9vw;
        }
      }

      p {
        font-size: 18px;
        font-weight: 400;
        color: rgba(0,0,0,.6);
        margin-bottom: 2.1em;

        @media (min-width: 1200px) {
          font-size: 1.4vw;
        }
      }

      .sub-banner-logos {
        margin-top: 26px;

        img {
          margin-left: 5px;
          margin-right: 9px;
          width: 78px;
          position: relative;
          top: -8px;
          display: inline-block;
        }

        .micromasters-logo {
          width: 119px;
          top: -10px;
        }

        .sub-banner-logos-text {
          vertical-align: bottom;
          display: inline-block;
          font-size: 18px;
          font-weight: 400;
          color: rgba(0, 0, 0, 0.6);

          @media (min-width: 1200px) {
            font-size: 1.4vw;
          }

          @include breakpoint(phone) {
            display: block;
            line-height: 1.4em;
            margin-bottom: 20px;
          }
        }
      }
    }
  }
}

.enroll-reason {
  margin-bottom: 20px;
}

.reasons-section, .current-programs-section, .how-it-works-section {
  padding: 7vw 0 8vw;
  margin: 0;
  text-align: center;

  .centered-content {
    max-width: 1360px;
  }

  h3 {
    margin: 0 5% 40px;
    font-weight: 400;
    font-size: 23px;
    color: white;

    @include breakpoint(phone) {
      font-size: 22px;
    }
  }
}

.quote-section {
  background: #fff;
  padding: 50px 0 157px;

  @include breakpoint(phone) {
    padding: 45px 0;
  }

  .quote {
    width: 71%;
    max-width: 1150px;
    margin: 0 auto;
    padding: 50px 0;
    text-align: left;
    border-bottom: 1px dashed #c5c5c5;

    @include breakpoint(phone) {
      width: 87%;
    }

    img.person {
      float: left;
      width: 170px;
      margin: 0 70px 80px;

      @include breakpoint(phone) {
        float: none;
        margin: 0 auto;
      }
    }

    blockquote.quote-text {
      color: $font-gray;
      font-size: 24px;
      font-style: normal;
      font-weight: 300;
      line-height: 1.4em;

      a {
        font-weight: 300;
      }


      @include breakpoint(phone) {
        font-size: 19px;
        margin-top: 20px;
      }
    }

    p.quote-author {
      color: $font-gray;
      font-size: 22px;
      font-weight: 300;

      @include breakpoint(phone) {
        font-size: 19px;
      }
    }
  }

  .quote:after {
    clear: both;
  }

  .quote:last-child {
    border-bottom: none;
  }
}

.current-programs-section {
  padding: 7vw 0 4vw;
  margin: 0;
  background-color: #ffffff;
  border-top: 1px solid #e5e5e5;

  h3 {
    margin: 0 0 70px;
    color: $font-black;

    @include breakpoint(phone) {
      margin: 0 0 40px;
    }
  }

  ul.current-programs-list {
    list-style: none;
    text-align: left;
    padding: 0;
    width: 96%;
    max-width: 1400px;
    margin: 0 auto;

    li {
      padding-bottom: 2.5em;
    }

    .program-thumbnail {
      position: relative;
      background-color: black;

      a.program-link {
        display: block;
      }

      .program-info {
        position: absolute;
        width: 100%;
        height: 95px;
        bottom: -1px;
        padding: 25px 22px;
        background: linear-gradient(to bottom,  rgba(0,0,0,0), rgba(0,0,0,1)); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
        z-index: 1;

        .program-title, .program-num-courses {
          margin: 0 0 8px;
          font-weight: 300;
          line-height: 1.4em;
        }

        .program-title {
          color: white;
          font-size: 19px;
        }

        .program-num-courses {
          color: rgba(255,255,255,.7);
          font-size: 15px;
        }
      }

      img {
        width: 100%;

        &.program-default-image {
          opacity: .4;
        }
      }
    }

    .program-description {
      padding: 20px 10px;
      height: 20em;

      @include breakpoint(phone) {
        padding: 20px 3px 30px;
      }

      p.program-description-text {
        max-height: 15em;
        overflow: auto;
      }

      p {
        color: $font-black;
        font-weight: 400;
        font-size: 15px;
        margin: 0 0 13px;
      }

      .mailing-list-button {
        margin-top: 12px;
      }
    }
  }
}

.reasons-section, .how-it-works-section {
  background-color: $mm-brand-bg;

  .col-md-4, .col-md-3 {
    padding: 0 3%;

    @include breakpoint(phone) {
      padding: 0 9%;
      width: 100%;
      float: left;
    }
  }

  h4, h5, p {
    color: white;
    font-weight: 300;
  }

  h4 {
    font-size: 20px;
    font-weight: 400;
    margin-bottom: 25px;
  }

  p {
    font-size: 16px;
    color: rgba(255,255,255,.8);
    line-height: 1.4em;
  }

  h3 {
    color: white;
  }

  .reasons-images-wrap {
    max-width: 300px;
    margin: 0 auto;
    width: 100%;
    position: relative;

    img {
      margin: auto auto;
      width: 123px;
    }
  }
}

.how-it-works-section {
  background: #1a1a1a;

  .reasons-images-wrap::after {
    content: url(/static/images/hiw-arrow2.png);
    position: absolute;
    left: 103%;
    top: 18px;
    @media (max-width: 992px) {
      content: none;
    }
  }

  .col-md-3:last-child {
    .reasons-images-wrap::after {
      content: none;
    }
  }

  h4 {
    color: rgba(255,255,255,.85);
  }

  p {
    color: rgba(255,255,255,.45);
  }
}


@media (min-width: 1200px) {
  .layout-boxed {
    background: #e4eaec;
  }

  .layout-boxed,
  .layout-boxed .site-navbar,
  .layout-boxed .site-menubar {
    max-width: 1320px;
    margin-right: auto;
    margin-left: auto;
  }
}

.layout-boxed .slidePanel-right,
.layout-boxed .slidePanel-left {
  top: 0;
  z-index: 1510;
}

.btn {
  padding: 10px 18px;
}

.btn-danger {
  background: #a51c31;
  border-color: #a51c31;
}

.btn-danger:hover {
  background: #c50724;
  border-color: #c50724;
}

.btn-danger:active {
  background: #000 !important;
  border-color: #000 !important;
}

.panel-page-content {
  margin: 0 auto;
  border-radius: 0;

  .panel-body {
    padding: 30px 20px 0 20px;

    h3 {
      color: #ae484b;
      font-size: 24px;
      font-weight: 700;
      margin: 0 0 0 15px;
      padding: 0 0 24px 0;
    }
  }
}

.program-link:hover {
  text-decoration: none;
}

.subscription-form legend, .subscription-form label {
  font-size: 14px;
  font-weight: 300;
  color: #333;
  border: 0;
}

.subscription-result {
  display: none;
  font-weight: 700;
  color: #fff;
  font-size: .9em;
  padding: 14px;
  border-radius: 4px;

  &.success {
    background: #417505;
  }

  &.error {
    background: #742932;
  }
}

.flat-field {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); // sass-lint:disable-line no-vendor-prefixes
  padding: 10px 4px;
  width: 100%;
  height: 100%;
  font-size: 15px;
  border: 0;
  border-bottom: 1px solid grey;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  background-color: rgba(0, 0, 0, 0);
  color: rgba(0, 0, 0, 0.870588);
  box-sizing: border-box;
  margin-top: 14px;
}

.mailchimp-btn {
  display: inline-flex !important;
  margin-right: 10px !important;
}

